manifests/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  parentRefs:
    - name: public
      namespace: traefik
      sectionName: http

  hostnames:
    - argocd.web.magellan.fpms.ac.be

  # rules:
  #   - matches:
  #       - path:
  #           type: PathPrefix
  #           value: /argocd

      backendRefs:
        - name: argocd-server
          port: 80
